adding sos_editor README

--- a/.doc_gen/metadata/sos_editor/index.html
+++ b/.doc_gen/metadata/sos_editor/index.html
@@ -41,15 +41,12 @@
 </div> -->
 <div>
 <div>
-  <h1>Editor</h1>
+  <h1>SoS Code Example Metadata GUI editor</h1>
   <div id="controls">
-  <p id ="intro"><label class="thissize">Before you begin:</label><br>
+  <p>This app enables you to quickly and easily add the required metadata to publish examples to official AWS documentation.</p>
+  <p>To get started:</p>
   <ol>
-   <li><p>Ensure your <i>USERPROFILE</i> is set to 'C:\Users\[username]' </p>
-       <p>To get a list of all environment variables enter the command <i><b>set</b></i>.</p>
-       <p>You can send them to a text file enter the command <i><b>set > filename.txt</b></i>.</p></li>
-  <li>Create your authoring environment per <a href="https://w.amazon.com/bin/view/AWSDocs/CodeExamples/Team/SOS/#HAuthoringenvironment">Authoring environment</a>.</li>
-  <li>Install WAMP and setup your localhost. <a href="https://blog.containerize.com/how-to-install-and-configure-wamp-server-on-windows/">Instructions here.</a></li>
+  <li>Complete prerequisites on <a href="https://github.com/brmur/aws-doc-sdk-examples/blob/sos_editor/.doc_gen/metadata/sos_editor/README.md">README</a>.</li>
   <li>Clone <a href="https://github.com/awsdocs/aws-doc-sdk-examples">aws-doc-sdk-examples GitHub repo</a> locally. <a href="https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository">Instructions here.</a></li>
   <li>Open your CLI tool, and navigate to "./doc_gen/metadata/sos_editor/</li>
   <li>Enter 'npm install'</li>
