--- a/.doc_gen/metadata/sos_editor/index.html
+++ b/.doc_gen/metadata/sos_editor/index.html
@@ -41,20 +41,14 @@
 </div> -->
 <div>
 <div>
-  <h1>Editor</h1>
+  <h1>SoS Metadata Editor</h1>
   <div id="controls">
-  <p id ="intro"><label class="thissize">Before you begin:</label><br>
+  <p id ="intro"><label class="thissize">To edit metadats:</label><br>
   <ol>
-   <li><p>Ensure your <i>USERPROFILE</i> is set to 'C:\Users\[username]' </p>
-       <p>To get a list of all environment variables enter the command <i><b>set</b></i>.</p>
-       <p>You can send them to a text file enter the command <i><b>set > filename.txt</b></i>.</p></li>
-  <li>Create your authoring environment per <a href="https://w.amazon.com/bin/view/AWSDocs/CodeExamples/Team/SOS/#HAuthoringenvironment">Authoring environment</a>.</li>
-  <li>Install WAMP and setup your localhost. <a href="https://blog.containerize.com/how-to-install-and-configure-wamp-server-on-windows/">Instructions here.</a></li>
   <li>Clone <a href="https://github.com/awsdocs/aws-doc-sdk-examples">aws-doc-sdk-examples GitHub repo</a> locally. <a href="https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository">Instructions here.</a></li>
-  <li>Open your CLI tool, and navigate to "./doc_gen/metadata/sos_editor/</li>
+  <li>Open your CLI tool, and navigate to "./doc_gen/metadata/sos_editor/js</li>
   <li>Enter 'npm install'</li>
-  <li>Enter 'node run.js' and follow the instructions.</li>
-  <li>Open this file in your localhost.</li>
+  <li>Enter 'node run.mjs' and follow the instructions.</li>
   </ol>
   </br>
 </div>
