creating branch for electron version (windows)

--- a/.doc_gen/metadata/sos_editor/index.html
+++ b/.doc_gen/metadata/sos_editor/index.html
@@ -10,7 +10,7 @@
 <div id="pagebody">
  <script src="./js/update_json.js"></script>
   <script src="./js/functions.js"></script>
-  <script src="./js/click_events.js"></script>
+  <script src="./js/click_events.js" ></script>
 <!--   <div class="split left">
     <h1>SoS metadata GUI editor</h1>
     <h3>Prerequisites</h3>
@@ -48,11 +48,12 @@
   <li>Clone <a href="https://github.com/awsdocs/aws-doc-sdk-examples">aws-doc-sdk-examples GitHub repo</a> locally. <a href="https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository">Instructions here.</a></li>
   <li>Open your CLI tool, and navigate to "./doc_gen/metadata/sos_editor/js</li>
   <li>Enter 'npm install'</li>
-  <li>Enter 'node run.mjs' and follow the instructions.</li>
+  <li>Enter 'node run.js' and follow the instructions.</li>
   </ol>
   </br>
 </div>
 <div style="margin-left:10%; border:1px solid black; max-width:50%; background-color:lightpink; color: black;">
+</script>
     <p id ="selectMyService"><label class="thissize">Principal service <i>(mandatory)</i></label><br><i>See ? for list of service stubs</i></br><input type="text" class="thissize" name="blockname" id ="selecttheservice" maxlength="1000"></input></p>
     <p id ="selectMyServices"><label class="thissize">Additional services <i>(optional)</i></label><br><i>Seperated by commas</i><br><input type="text" class="thissize" name="blocknames" id ="selecttheservices" maxlength="1000"></input></p><button id = "selectService">Submit</button>
     <p id="selectBlockView" class="show-when-target"><label class="thissize">Select block to edit / create (mandatory)</label><br><i>Select 'Not listed' to create a new block</i></br><select id="selectBlock" class="show-when-target"><option>Choose an operation</option></select></p>
