--- a/.doc_gen/my-app/src/index.html
+++ b/.doc_gen/my-app/src/index.html
@@ -3,42 +3,15 @@
   <meta charset="UTF-8">
   <title>title</title>
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="styles.css"/>
+
+
 </head>
 <div id="pagebody">
+ <script src="./js/click_events.js"></script>
  <script src="./js/update_json.js"></script>
   <script src="./js/functions.js"></script>
-  <script src="./js/click_events.js"></script>
-<!--   <div class="split left">
-    <h1>SoS metadata GUI editor</h1>
-    <h3>Prerequisites</h3>
-    <ul>
-      <li><p>Ensure your <i>USERPROFILE</i> is set to 'C:\Users\[username]' </p>
-        <p>To get a list of all environment variables enter the command <i><b>set</b></i>.</p>
-        <p>You can send them to a text file enter the command <i><b>set > filename.txt</b></i>.</p></li>
-      <li>Create your authoring environment per <a href="https://w.amazon.com/bin/view/AWSDocs/CodeExamples/Team/SOS/#HAuthoringenvironment">Authoring environment</a>.</li>
-    </ul>
-    <h3>Create/update metadata</h3>
-    <ol>
-      <li><p>Follow steps 1 and 2 of <a href="https://w.amazon.com/bin/view/AWSDocs/CodeExamples/Team/SOS/#HAddinganewAPIexample">Adding a new API example</a>.</p>
-        <p>Ensure the metadata file you want to edit is in the <i>/.doc_gen/metadata/sos_editor</i> folder <br>
-          of the <b>AWSDocsSdkExamplesPublic</b> pagckage you're working on.</p>
-        <p>If not, create it. Remember to update the 'services' section of this 'mapping.yaml' file to include the entities for this new service.</p></li>
-      <li>Open the command line and navigate to the <i>/.doc_gen/metadata/sos_editor folder</i>.</li>
-      <li><p>Run <i>node create_json.js [stubname of service metadata to edit].</i></p>
-        <p>For example, <i>node create_json.js sns</i>.</p>
-      <p><b>Note</b>: You are required to run this command only once per session.</p></li>
-      <li><p>Create/edit your metadata using <b>Editor</b></p>
-      <li>Click <b>Create YAML</b> at the bottom of the <b>Editor</b>.</li>
-      <li>In the command line run <i>node update_yaml.js [stubname of service metadata to update].</i></p>
-        <p>For example, <i>node update_yaml.js sns</i>.</p></li>
-      <li>The metadata file is now updated locally. If you want to continue editing metadata, refresh the browser and proceed. <br>
-        Otherwise, validate, build, verify, and submit your changes for review as described in <a href="https://w.amazon.com/bin/view/AWSDocs/CodeExamples/Team/SOS#HValidatingmetadata">the SoS wiki</a>. </li>
-    </ol>
-  </div>
-</div> -->
 <div>
 <div>
   <h1>SoS Code Example Metadata GUI editor</h1>
@@ -51,7 +24,7 @@
   <li>Clone <a href="https://github.com/awsdocs/aws-doc-sdk-examples">aws-doc-sdk-examples GitHub repo</a> locally. <a href="https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository">Instructions here.</a></li>
   <li>Open your CLI tool, and navigate to "./doc_gen/metadata/sos_editor/</li>
   <li>Enter 'npm install'</li>
-  <li>Enter 'node run.mjs' and follow the instructions.</li>
+  <li>Enter 'node run.js' and follow the instructions.</li>
   <li>Open this file in your localhost.</li>
   </ol>
   </br>
@@ -83,7 +56,10 @@
   </div>
  <script src="./js/update_json.js"></script>
   <script src="./js/functions.js"></script>
-  <script src="./js/click_events.js"></script>
+<script src="./js/click_events.js"></script>
+
+ -->
+
 </body>
 
 </html>
