--- a/.doc_gen/metadata/sos_editor/index.html
+++ b/.doc_gen/metadata/sos_editor/index.html
@@ -51,7 +51,7 @@
   <li>Clone <a href="https://github.com/awsdocs/aws-doc-sdk-examples">aws-doc-sdk-examples GitHub repo</a> locally. <a href="https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository">Instructions here.</a></li>
   <li>Open your CLI tool, and navigate to "./doc_gen/metadata/sos_editor/</li>
   <li>Enter 'npm install'</li>
-  <li>Enter 'node run.js' and follow the instructions.</li>
+  <li>Enter 'node run.mjs' and follow the instructions.</li>
   <li>Open this file in your localhost.</li>
   </ol>
   </br>
