--- a/.doc_gen/metadata/sos_editor/index.html
+++ b/.doc_gen/metadata/sos_editor/index.html
@@ -67,15 +67,13 @@
     <p><textarea type="text" name="synopsislist" id ="synopsislist" maxlength="1000"></textarea></p></div>
     <p id ="addCategory" class="show-when-target"><label class="thissize">Category <i>(optional)</i></label><br><textarea type="text" name="category" id ="category" maxlength="1000"></textarea></p>
     <p id="chooseLangView" class="show-when-target"><label class="thissize">Choose Language <i>(mandatory)</i></label><br><select id="languages" class="show-when-target"><option>Choose language </option></select></p>
-    <p id = "addLanguageView" class="show-when-target"><label class="thissize">Language <i>(mandatory)</i></label><select id="addlanguage" class="show-when-target" ><option>Add a language </option></select></p>
-    <p id="chooseSDKView" class="show-when-target"><select id="sdkVersion" class="show-when-target" ><option>Choose an SDK version (mandatory)</option></select></p>
+    <p id = "addLanguageView" class="show-when-target"><label class="thissize">Language <i>(mandatory)</i></label><br><select id="addlanguage" class="show-when-target" ><option>Add a language </option></select></p>
+    <p id="chooseSDKView" class="show-when-target"><label class="thissize">Choose SDK version <i>(mandatory)</i><br><select id="sdkVersion" class="show-when-target" ></select></p>
     <p id ="addSdkVersion" class="show-when-target"><label class="thissize">Add SDK version <i>(mandatory)</i></label><br><input type="text" class="thissize" name="text" id ="addskdversion" maxlength="1000"></input><button id = "subVersion">Check version</button></p>
     <p id ="gitHub" class="show-when-target"><label class="thissize">GitHub link <i>(optional)</i></label><br><i>Exclude 'https://github.com/awsdocs/aws-doc-sdk-examples/tree/master/'</i></br><textarea type="text" name="text" id ="githublink" maxlength="1000"></textarea></p>
     <p id ="sdkGuide" class="show-when-target"><label class="thissize">SDK Guide link <i>(optional)</i> </label><br><i>Exclude 'https://docs.aws.amazon.com/'</i></br><textarea type="text" name="text" id ="sdkguidelink" maxlength="1000"></textarea></p>
     <p id="selectTagOrFile" class="show-when-target"><label class="thissize">Select how you want to add your snippets <i>(mandatory)</i></label><br><select id="selecttagorfile" class="show-when-target"><option>Choose a snippet type</option></select></p>
- <!--    <p id ="anotherSnippet" class="show-when-target" class="thissize"><button id = "newsnippet">Add a snippet tag</button></p> --><!-- <p id ="removeSnippet" class="show-when-target" class="thissize"><button id = "removesnip">Remove a snippet tag</button></p>--><!--
-    <p id ="addSnippetFile" class="show-when-target" class="thissize"><button id = "newsnippetfile">Add a snippet file</button></p> --><!-- <p id ="removeSnippetFile" class="show-when-target" class="thissize"><button id = "removesnipfile">Remove a snippet file</button></p>--><!--
-     --><p id ="createYAML"  class="show-when-target"><button id = "yaml" onclick="update_json()">Create YAML</button></p>
+    <p id ="createYAML"  class="show-when-target"><button id = "yaml" onclick="update_json()">Create YAML</button></p>
   </div>
   </div>
  <script src="./js/update_json.js"></script>
