--- a/kotlin/usecases/cognito_flutter_mobile_app/web/index.html
+++ b/kotlin/usecases/cognito_flutter_mobile_app/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="android_app">
+  <meta name="apple-mobile-web-app-title" content="myapp">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>android_app</title>
+  <title>myapp</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
