JavaScript (v3): Transcribe Streaming - Upgrade webpack version.

--- a/javascriptv3/example_code/cross-services/transcribe-streaming-app/public/index.html
+++ b/javascriptv3/example_code/cross-services/transcribe-streaming-app/public/index.html
@@ -14,8 +14,7 @@ index.html is the front-end HTML code for a tutorial demonstrating how to stream
   <head>
     <meta charset="UTF-8" />
     <title>Streaming Speech to Text</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="text/javascript" src="./main.js"></script>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
 
   <body>
@@ -145,8 +144,7 @@ index.html is the front-end HTML code for a tutorial demonstrating how to stream
         </p>
       </div>
     </div>
-
-    <script type="text/javascript" src="./main.js"></script>
+    <script type="text/javascript" src="./index.bundle.js"></script>
   </body>
 </html>
 <!-- snippet-end:[transcribe.HTML.streaming.indexv3] -->
